Fix some style-related issue with the Markdown links and fields.
The Markdown reference links were just a bit too high up, which was
more noticeable now that we have a checkbox. This fixes them to be
better aligned.

Plain text fields were also getting a minimum height when they shouldn't
have, due to the way we checked for the presence of a minHeight option.
This resulted in the minHeight being set to the default of 70 when 0 was
passed. We now check for the existence by comparing to undefined.

Reviewed at https://reviews.reviewboard.org/r/6468/

--- a/reviewboard/static/rb/css/reviews.less
+++ b/reviewboard/static/rb/css/reviews.less
@@ -168,7 +168,7 @@
   font-size: 8pt;
   font-weight: normal;
   float: right;
-  line-height: 16px;
+  line-height: 25px;
   margin-right: 0.5em;
   text-decoration: none;
 
@@ -1607,6 +1607,10 @@
     z-index: @z-index-deco;
   }
 
+  .markdown-info {
+    line-height: 16px;
+  }
+
   .status {
     margin: 4px 0;
     font-style: italic;
@@ -1767,7 +1771,7 @@
 #draft-banner,
 #discard-banner,
 #submitted-banner {
-  label {
+  p label {
     .inline-editor-label();
   }
 
